# bmstu-experiment-plan

./: README.md
backend/: Cargo.toml
backend/src/: api.rs  main.rs  planned_experiment.rs
backend/src/api/: request.rs  response.rs
backend/src/model/: generator.rs  service.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: hooks.ts
frontend/src/components/: ExperimentTable.tsx  FloatInput.tsx
lab1/: package-lock.json  package.json
lab1/backend/src/model/: unit.rs
lab1/frontend/: package.json  tsconfig.json
lab1/src/: App.tsx  theme.ts
lab1/src/model/: Model.ts
lab2/backend/: Cargo.toml
lab2/backend/src/: api.rs  main.rs  model.rs
lab2/backend/src/api/: request.rs  response.rs
lab2/backend/src/model/: generator.rs  service.rs
lab2/frontend/: package-lock.json  package.json
lab2/frontend/src/: App.tsx
lab2/frontend/src/api/: hooks.ts
lab2/frontend/src/model/: Rayleigh.ts
