[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
futures = "0.3.30"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
